# red_primality

./: Cargo.toml  README.md
src/: factor.rs  iter.rs  lib.rs  prime.rs
