[package]
name = "red_primality"
version = "0.1.6"
authors = ["Ken Bateman <novadenizen@gmail.com>"]
edition = "2018"
description = "red_primality provides a quick accurate primality test for all u64"
license = "LGPL-3.0"
repository = "https://github.com/NovaDenizen/red_primality.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
primal = "0.2.3"
num-integer = "0.1.41"
